# PDF-Master

./: .gitignore  LICENSE  PDFMaster.spec  README.md  TODO.md  gui_main.py  main.py  pyproject.toml  requirements.txt  simulation_report.json
.github/workflows/: ci.yml
adapters/: __init__.py  pymupdf_backend.py
core/: __init__.py  exceptions.py  export_service.py  models.py  protocols.py  thumbnail_service.py  workspace.py
gui/: __init__.py  dialogs.py  empty_state.py  icons.py  interfaces.py  models.py  presenter.py  settings.py  styles.py  toast.py  views.py  workers.py
tests/: test_export_service.py  test_presenter.py  test_workspace.py
