[project]
name = "PDFMaster"
version = "0.1.0"
description = "A powerful PDF manipulation desktop application built with PyMuPDF and PySide6"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.24,<2.0",
    "PySide6>=6.6,<7.0",
]

[project.scripts]
pdfmaster = "main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = ["tests/", "gui/"]

[[tool.mypy.overrides]]
module = ["fitz.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=core --cov=adapters --cov-report=term-missing --cov-fail-under=60"
